--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
         <title>Killer & Survivor Perk Roulette | Dead by Daylight Randomizer</title>
         <meta name="description" content="Like a perk roulette wheel, this Randomizer generates random killer or survivor perks to play with in Dead by Daylight.">
 
-        <link rel="shortcut icon" href="https://verewygt.github.io/perkroulette/css/img/favicon.png">
+        <link rel="shortcut icon" href="http://perkroulette.xstarwake.com/css/img/favicon.png">
 
         <meta property="st:section" content="Like a perk roulette wheel, this Randomizer generates random killer or survivor perks to play with in Dead by Daylight.">
         <meta name="twitter:title" content="Killer & Survivor Perk Roulette | Dead by Daylight Randomizer">
         <meta name="twitter:description" content="Like a perk roulette wheel, this Randomizer generates random killer or survivor perks to play with in Dead by Daylight.">
 
-        <link rel="stylesheet" href="https://verewygt.github.io/perkroulette/css/app.css" media="all" id="appcss">
-        <script src="https://verewygt.github.io/perkroulette/js/app.js" type="text/javascript"></script>
+        <link rel="stylesheet" href="http://perkroulette.xstarwake.com/css/app.css" media="all" id="appcss">
+        <script src="http://perkroulette.xstarwake.com/js/app.js" type="text/javascript"></script>
 
         <!-- <link rel="stylesheet" href="C:\Users\Julien Zbinden\Documents\GitHub\Sites\verewygt.github.io\perkroulette\css\app.css" media="all" id="appcss">
         <script src="C:\Users\Julien Zbinden\Documents\GitHub\Sites\verewygt.github.io\perkroulette\js\app.js" type="text/javascript"></script> -->
@@ -30,7 +30,7 @@
 
           gtag('config', 'UA-162970659-1');
         </script>
-        <script src="https://verewygt.github.io/perkroulette/js/ga-optout.js" type="text/javascript"></script>
+        <script src="http://perkroulette.xstarwake.com/js/ga-optout.js" type="text/javascript"></script>
     </head>
 
     <body class="perkroulette-app" id="perkroulette-app" onload="loadPerks()">
@@ -39,7 +39,7 @@
             <header class="app-header">
                 <div class="header-inner">
                     <div class="logo">
-                        <a class="logo-link" href="https://verewygt.github.io/perkroulette/" target="_self">
+                        <a class="logo-link" href="http://perkroulette.xstarwake.com/" target="_self">
                             <p id="subtext">Dead by Daylight</p>
                             <p id="main-text">Perk Roulette</p>
                         </a>
@@ -47,10 +47,10 @@
                     <nav class="navigation">
                         <ul class="nav-list">
                             <li class="nav-element">
-                                <a class="nav-link current" href="https://verewygt.github.io/perkroulette/">Perks</a>
+                                <a class="nav-link current" href="http://perkroulette.xstarwake.com/">Perks</a>
                             </li>
                             <li class="nav-element">
-                                <a class="nav-link" href="https://verewygt.github.io/perkroulette/streaming-mode">Streaming Mode</a>
+                                <a class="nav-link" href="http://perkroulette.xstarwake.com/streaming-mode">Streaming Mode</a>
                             </li>
                         </ul>
                     </nav>
@@ -246,12 +246,12 @@
                     <p class="footer-text">Developed by <a class="link" href="https://twitter.com/verewygt" target="_blank" title="https://twitter.com/verewygt" rel="noreferrer">verewygt</a></p>
                 </div>
                 <div class="footer-links">
-                    <a class="link" href="https://verewygt.github.io/perkroulette/privacy/">Privacy Policy</a>
+                    <a class="link" href="http://perkroulette.xstarwake.com/privacy/">Privacy Policy</a>
                 </div>
             </footer>
 
             <div class="cookie-banner" id="cookie-banner">
-                <p class="text">This site uses cookies to provide you with a great experience. By clicking "OK", you accept the <a class="link" href="https://verewygt.github.io/perkroulette/privacy/">use of cookies</a>.</p>
+                <p class="text">This site uses cookies to provide you with a great experience. By clicking "OK", you accept the <a class="link" href="http://perkroulette.xstarwake.com/privacy/">use of cookies</a>.</p>
                 <button type="button" name="accept-cookies" onclick="acceptCookies()">OK</button>
             </div>
 
