--- a/streaming-mode/index.html
+++ b/streaming-mode/index.html
@@ -7,14 +7,14 @@
         <title>Perk Roulette for OBS, etc. | Dead by Daylight Randomizer</title>
         <meta name="description" content="Randomize perks directly in OBS, XSplit or any other streaming software.">
 
-        <link rel="shortcut icon" href="https://verewygt.github.io/perkroulette/css/img/favicon.png">
+        <link rel="shortcut icon" href="http://perkroulette.xstarwake.com/css/img/favicon.png">
 
         <meta property="st:section" content="Randomize perks directly in OBS, XSplit or any other streaming software.">
         <meta name="twitter:title" content="Perk Roulette for OBS, etc. | Dead by Daylight Randomizer">
         <meta name="twitter:description" content="Randomize perks directly in OBS, XSplit or any other streaming software.">
 
-        <link rel="stylesheet" href="https://verewygt.github.io/perkroulette/css/app.css" media="all" id="appcss">
-        <script src="https://verewygt.github.io/perkroulette/js/streaming-mode.js" type="text/javascript"></script>
+        <link rel="stylesheet" href="http://perkroulette.xstarwake.com/css/app.css" media="all" id="appcss">
+        <script src="http://perkroulette.xstarwake.com/js/streaming-mode.js" type="text/javascript"></script>
 
         <meta name="google-site-verification" content="bWB7m6flbE9J8xvgVjozLnzaBwDFCiOd6Fx80WeT1P4" />
 
@@ -27,7 +27,7 @@
 
           gtag('config', 'UA-162970659-1');
         </script>
-        <script src="https://verewygt.github.io/perkroulette/js/ga-optout.js" type="text/javascript"></script>
+        <script src="http://perkroulette.xstarwake.com/js/ga-optout.js" type="text/javascript"></script>
     </head>
 
     <body class="perkroulette-app" id="streaming-mode" onload="loadPerks()">
@@ -36,7 +36,7 @@
             <header class="app-header">
                 <div class="header-inner">
                     <div class="logo">
-                        <a class="logo-link" href="https://verewygt.github.io/perkroulette/" target="_self">
+                        <a class="logo-link" href="http://perkroulette.xstarwake.com/" target="_self">
                             <p id="subtext">Dead by Daylight</p>
                             <p id="main-text">Perk Roulette</p>
                         </a>
@@ -44,10 +44,10 @@
                     <nav class="navigation">
                         <ul class="nav-list">
                             <li class="nav-element">
-                                <a class="nav-link" href="https://verewygt.github.io/perkroulette/">Perks</a>
+                                <a class="nav-link" href="http://perkroulette.xstarwake.com/">Perks</a>
                             </li>
                             <li class="nav-element">
-                                <a class="nav-link current" href="https://verewygt.github.io/perkroulette/streaming-mode">Streaming mode</a>
+                                <a class="nav-link current" href="http://perkroulette.xstarwake.com/streaming-mode">Streaming mode</a>
                             </li>
                         </ul>
                     </nav>
@@ -147,13 +147,13 @@
 
                     <h2 class="site-subtitle">Preview</h2>
                     <div class="preview-container">
-                        <iframe id="embed-preview" src="https://verewygt.github.io/perkroulette/streaming-mode/embed?type=surv" width="100%" height="100%"></iframe>
+                        <iframe id="embed-preview" src="hhttp://perkroulette.xstarwake.com/streaming-mode/embed?type=surv" width="100%" height="100%"></iframe>
                     </div>
 
 
                     <h2 class="site-subtitle">Streaming Software Link</h2>
                     <div class="link-field">
-                        <input id="link-input" type="text" name="stream-software-url" value="https://verewygt.github.io/perkroulette/streaming-mode/embed?type=surv">
+                        <input id="link-input" type="text" name="stream-software-url" value="http://perkroulette.xstarwake.com/streaming-mode/embed?type=surv">
                         <input id="link-copy-btn" type="button" value="Copy URL" onclick="copyToClipboard()">
                     </div>
                 </div>
@@ -196,12 +196,12 @@
                     <p class="footer-text">Developed by <a class="link" href="https://twitter.com/verewygt" target="_blank" title="https://twitter.com/verewygt" rel="noreferrer">verewygt</a></p>
                 </div>
                 <div class="footer-links">
-                    <a class="link" href="https://verewygt.github.io/perkroulette/privacy/">Privacy Policy</a>
+                    <a class="link" href="http://perkroulette.xstarwake.com/privacy/">Privacy Policy</a>
                 </div>
             </footer>
 
             <div class="cookie-banner" id="cookie-banner">
-                <p class="text">This site uses cookies to provide you with a great experience. By clicking "OK", you accept the <a class="link" href="https://verewygt.github.io/perkroulette/privacy/">use of cookies</a>.</p>
+                <p class="text">This site uses cookies to provide you with a great experience. By clicking "OK", you accept the <a class="link" href="http://perkroulette.xstarwake.com/privacy/">use of cookies</a>.</p>
                 <button type="button" name="accept-cookies" onclick="acceptCookies()">OK</button>
             </div>
 
