🖖💇 Checkpoint ./streaming-mode/embed/index.html:41330950/222 ./privacy/index.html:41330950/594 ./js/streaming-mode.js:41330950/222 ./js/streaming-mode-embed.js:41330950/296 ./js/ga-optout.js:41330950/61 ./js/app.js:41330950/148 ./css/app.css:41330950/221 ./index.html:41330950/458 ./streaming-mode/index.html:41330950/440

--- a/index.html
+++ b/index.html
@@ -235,15 +235,12 @@
                     <h3 class="sidebar-title">Image credit</h3>
                     <p class="sidebar-text"><span>The perk icons are game related content and therefore property of <a class="link" href="https://www.bhvr.com/" target="_blank" title="https://www.bhvr.com/" rel="noreferrer">Behaviour</a> and were taken from the official <a class="link" href="https://deadbydaylight.gamepedia.com/Dead_by_Daylight_Wiki" target="_blank" title="https://deadbydaylight.gamepedia.com/Dead_by_Daylight_Wiki" rel="noreferrer">Dead by Daylight wiki</a>.</span></p>
 
-                    <p class="sidebar-text"><span>Other icons are from <a class="link" href="https://icons8.com/" target="_blank" title="https://icons8.com/" rel="noreferrer">icons8</a>.</span></p>
-
-                    <p class="sidebar-text"><span>All other images were created by the author.</span></p>
                 </div>
             </section>
 
             <footer class="app-footer">
                 <div class="author">
-                    <p class="footer-text">Developed by <a class="link" href="https://twitter.com/verewygt" target="_blank" title="https://twitter.com/verewygt" rel="noreferrer">verewygt</a></p>
+                    <p class="footer-text">Developed by <a class="link" href="https://twitter.com/toxic__salt" target="_blank" title="https://twitter.com/toxic__salt" rel="noreferrer">ToxicSalt</a></p>
                 </div>
                 <div class="footer-links">
                     <a class="link" href="http://perkroulette.xstarwake.com/privacy/">Privacy Policy</a>
