--- a/privacy/index.html
+++ b/privacy/index.html
@@ -6,12 +6,12 @@
 
         <title>Privacy Policy | Dead by Daylight Randomizer</title>
 
-        <link rel="shortcut icon" href="https://verewygt.github.io/perkroulette/css/img/favicon.png">
+        <link rel="shortcut icon" href="http://perkroulette.xstarwake.com/css/img/favicon.png">
 
         <meta name="robots" content="noindex">
 
-        <link rel="stylesheet" href="https://verewygt.github.io/perkroulette/css/app.css" media="all" id="appcss">
-        <script src="https://verewygt.github.io/perkroulette/js/ga-optout.js" type="text/javascript"></script>
+        <link rel="stylesheet" href="http://perkroulette.xstarwake.com/css/app.css" media="all" id="appcss">
+        <script src="http://perkroulette.xstarwake.com/js/ga-optout.js" type="text/javascript"></script>
 
         <meta name="google-site-verification" content="bWB7m6flbE9J8xvgVjozLnzaBwDFCiOd6Fx80WeT1P4" />
     </head>
@@ -22,7 +22,7 @@
             <header class="app-header">
                 <div class="header-inner">
                     <div class="logo">
-                        <a class="logo-link" href="https://verewygt.github.io/perkroulette/" target="_self">
+                        <a class="logo-link" href="http://perkroulette.xstarwake.com/" target="_self">
                             <p id="subtext">Dead by Daylight</p>
                             <p id="main-text">Perk Roulette</p>
                         </a>
@@ -30,10 +30,10 @@
                     <nav class="navigation">
                         <ul class="nav-list">
                             <li class="nav-element">
-                                <a class="nav-link" href="https://verewygt.github.io/perkroulette/">Perks</a>
+                                <a class="nav-link" href="http://perkroulette.xstarwake.com/">Perks</a>
                             </li>
                             <li class="nav-element">
-                                <a class="nav-link" href="https://verewygt.github.io/perkroulette/streaming-mode">Streaming Mode</a>
+                                <a class="nav-link" href="http://perkroulette.xstarwake.com/streaming-mode">Streaming Mode</a>
                             </li>
                         </ul>
                     </nav>
@@ -89,12 +89,12 @@
                     <p class="footer-text">Developed by <a class="link" href="https://twitter.com/verewygt" target="_blank" title="https://twitter.com/verewygt" rel="noreferrer">verewygt</a></p>
                 </div>
                 <div class="footer-links">
-                    <a class="link" href="https://verewygt.github.io/perkroulette/privacy/">Privacy Policy</a>
+                    <a class="link" href="http://perkroulette.xstarwake.com/privacy/">Privacy Policy</a>
                 </div>
             </footer>
 
             <div class="cookie-banner" id="cookie-banner">
-                <p class="text">This site uses cookies to provide you with a great experience. By clicking "OK", you accept the <a class="link" href="https://verewygt.github.io/perkroulette/privacy/">use of cookies</a>.</p>
+                <p class="text">This site uses cookies to provide you with a great experience. By clicking "OK", you accept the <a class="link" href="http://perkroulette.xstarwake.com/privacy/">use of cookies</a>.</p>
                 <button type="button" name="accept-cookies" onclick="acceptCookies()">OK</button>
             </div>
 
