--- a/streaming-mode/embed/index.html
+++ b/streaming-mode/embed/index.html
@@ -4,10 +4,10 @@
         <meta charset="utf-8">
         <title>Streaming mode embed | Dead by Daylight Randomizer</title>
 
-        <link rel="shortcut icon" href="https://verewygt.github.io/perkroulette/css/img/favicon.png">
+        <link rel="shortcut icon" href="http://perkroulette.xstarwake.com/css/img/favicon.png">
 
-        <link rel="stylesheet" href="https://verewygt.github.io/perkroulette/css/app.css" media="all" id="appcss">
-        <script src="https://verewygt.github.io/perkroulette/js/streaming-mode-embed.js" type="text/javascript"></script>
+        <link rel="stylesheet" href="http://perkroulette.xstarwake.com/css/app.css" media="all" id="appcss">
+        <script src="http://perkroulette.xstarwake.com/js/streaming-mode-embed.js" type="text/javascript"></script>
     </head>
     <body class="perkroulette-app" id="streaming-mode-embed" onload="pickRandomPerk()">
         <div class="perks-hgrid">
