⏲🚊 Checkpoint ./streaming-mode/index.html:41330950/7317 ./index.html:41330950/60

--- a/index.html
+++ b/index.html
@@ -120,8 +120,7 @@
                                 <p class="site-paragraph">Search for perks under 'Perk Management' that you want to disable if you don't want them to show up in the results. But you need to have at least 4 perks selected.</p>
                                 <p class="site-paragraph">Click on the 'Randomize' button to get your perks.</p>
 
-                                <p class="site-paragraph">Do you have a question? Something is not working as it should? Don't hesitate to DM me on Twitter (<a class="link" href="https://twitter.com/verewygt" target="_blank" title="https://twitter.com/verewygt" rel="noreferrer">@verewygt</a>) and I will try to get to you!</p>
-                            </div>
+                                <p class="site-paragraph">Do you have a question? Something is not working as it should? Don't hesitate to DM me on Twitter (<a class="link" href="https://twitter.com/toxic__salt" target="_blank" title="https://twitter.com/Toxic__Salt" rel="noreferrer">@Toxic__Salt</a>) and I will try to get to you!</p>                            </div>
                         </div>
                     </div>
 
