--- a/streaming-mode/index.html
+++ b/streaming-mode/index.html
@@ -140,7 +140,7 @@
                                 <p class="site-paragraph">In the sources tab, add a new 'browser' source. Paste the link copied from the site in the URL field. Choose a resolution for the overlay, 1800 x 800 for example works fine.</p>
                                 <p class="site-paragraph">TIP: Tick the checkbox "Refresh browser if scene becomes active" to reroll the generator each time you switch back to the scene or you hide & unhide the browser source.</p>
 
-                                <p class="site-paragraph">Do you have a question? Something is not working as it should? Don't hesitate to DM me on Twitter (<a class="link" href="https://twitter.com/verewygt" target="_blank" title="https://twitter.com/verewygt" rel="noreferrer">@verewygt</a>) and I will try to get to you. Have fun!</p>
+                                <p class="site-paragraph">Do you have a question? Something is not working as it should? Don't hesitate to DM me on Twitter (<a class="link" href="https://twitter.com/Toxic__Salt" target="_blank" title="https://twitter.com/Toxic__salt" rel="noreferrer">@Toxic__Salt</a>) and I will try to get to you. Have fun!</p>
                             </div>
                         </div>
                     </div>
