--- a/index2.html
+++ b/index2.html
@@ -106,7 +106,7 @@
 
                     <div class="sub-menu">
                         <span class="tag">Updated</span>
-                        <span class="ver">CHAPTER 23: Sadako Rising</span>
+                        <span class="ver">Adding Pickle Party</span>
 
                         <div class="info">
                             <input type="radio" name="tut-toggle" id="hide-tut">
