--- a/custom/index.html
+++ b/custom/index.html
@@ -68,9 +68,11 @@
                             <h3>Perk type</h3>
                             <input onclick="loadPerks()" type="radio" name="teams" id="surv" checked>
                             <input onclick="loadPerks()" type="radio" name="teams" id="kill">
+                            <input onclick="loadPerks()" type="radio" name="teams" id="pckl">
                             <div class="label_container">
                                 <label for="surv" onclick="loadPerks()">Survivor</label>
                                 <label for="kill" onclick="loadPerks()">Killer</label>
+                                <label for="pckl" onclick="loadPerks()">Pickle</label>
                             </div>
                         </div>
 
