--- a/index.html
+++ b/index.html
@@ -69,9 +69,11 @@
                             <h3>Perk type</h3>
                             <input onclick="loadPerks()" type="radio" name="teams" id="surv" checked>
                             <input onclick="loadPerks()" type="radio" name="teams" id="kill">
+                            <input onclick="loadPerks()" type="radio" name="teams" id="pckl">
                             <div class="label_container">
                                 <label for="surv" onclick="loadPerks()">Survivor</label>
                                 <label for="kill" onclick="loadPerks()">Killer</label>
+                                <label for="pckl" onclick="loadPerks()">Pickle</label>
                             </div>
                         </div>
 
@@ -104,7 +106,7 @@
 
                     <div class="sub-menu">
                         <span class="tag">Updated</span>
-                        <span class="ver">CHAPTER 23: Sadako Rising</span>
+                        <span class="ver">Adding Pickle Party</span>
 
                         <div class="info">
                             <input type="radio" name="tut-toggle" id="hide-tut">
