--- a/index.html
+++ b/index.html
@@ -17,17 +17,18 @@
         <script src="http://perkroulette.xstarwake.com/js/app.js" type="text/javascript"></script>
 
     
-        <meta name="google-site-verification" content="bWB7m6flbE9J8xvgVjozLnzaBwDFCiOd6Fx80WeT1P4" />
+        <meta name="google-site-verification" content="xKoXTKsvlt-1SvMqKPRk9MzMxiUUsMpwqR9WrPe4OG4" />
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162970659-1"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-V7TE8CR24V"></script>
         <script>
-          window.dataLayer = window.dataLayer || [];
-          function gtag(){dataLayer.push(arguments);}
-          gtag('js', new Date());
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
 
-          gtag('config', 'UA-162970659-1');
+            gtag('config', 'G-V7TE8CR24V');
         </script>
+
         <script src="http://perkroulette.xstarwake.com/js/ga-optout.js" type="text/javascript"></script>
     </head>
 
