--- a/streaming-mode/index.html
+++ b/streaming-mode/index.html
@@ -19,13 +19,13 @@
         <meta name="google-site-verification" content="bWB7m6flbE9J8xvgVjozLnzaBwDFCiOd6Fx80WeT1P4" />
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162970659-1"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-V7TE8CR24V"></script>
         <script>
-          window.dataLayer = window.dataLayer || [];
-          function gtag(){dataLayer.push(arguments);}
-          gtag('js', new Date());
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
 
-          gtag('config', 'UA-162970659-1');
+            gtag('config', 'G-V7TE8CR24V');
         </script>
         <script src="http://perkroulette.xstarwake.com/js/ga-optout.js" type="text/javascript"></script>
     </head>
@@ -68,9 +68,11 @@
                             <h3>Perk type</h3>
                             <input onclick="loadPerks()" type="radio" name="teams" id="surv" checked>
                             <input onclick="loadPerks()" type="radio" name="teams" id="kill">
+                            <input onclick="loadPerks()" type="radio" name="teams" id="pckl">
                             <div class="label_container">
                                 <label for="surv" onclick="loadPerks()">Survivor</label>
                                 <label for="kill" onclick="loadPerks()">Killer</label>
+                                <label for="pckl" onclick="loadPerks()">Pickle</label>
                             </div>
                         </div>
 
