--- a/index.html
+++ b/index.html
@@ -71,10 +71,12 @@
                             <input onclick="loadPerks()" type="radio" name="teams" id="surv" checked>
                             <input onclick="loadPerks()" type="radio" name="teams" id="kill">
                             <input onclick="loadPerks()" type="radio" name="teams" id="pckl">
+                            <input onclick="loadPerks()" type="radio" name="teams" id="pnsh">
                             <div class="label_container">
                                 <label for="surv" onclick="loadPerks()">Survivor</label>
                                 <label for="kill" onclick="loadPerks()">Killer</label>
                                 <label for="pckl" onclick="loadPerks()">Pickle</label>
+                                <label for="pnsh" onclick="loadPerks()">Punish</label>
                             </div>
                         </div>
 
