--- a/streaming-mode/embed/index.html
+++ b/streaming-mode/embed/index.html
@@ -8,14 +8,9 @@
 
         <link rel="stylesheet" href="http://perkroulette.xstarwake.com/css/app.css" media="all" id="appcss">
         <script src="http://perkroulette.xstarwake.com/js/streaming-mode-embed.js" type="text/javascript"></script>
-        <audio autoplay>
-            <source src="http://perkroulette.xstarwake.com/css/audio/slots.mp3" type="audio/mp3">
-              Your browser does not support the audio element.
-        </audio>
 
+        <audio src="http://perkroulette.xstarwake.com/css/audio/slots.mp3" autoplay="autoplay" loop="loop"></audio>
 
-
-        </audio>
     </head>
     <body class="perkroulette-app" id="streaming-mode-embed" onload="pickRandomPerk()">
         <div class="perks-hgrid">
