--- a/streaming-mode/embed/index.html
+++ b/streaming-mode/embed/index.html
@@ -9,9 +9,8 @@
         <link rel="stylesheet" href="http://perkroulette.xstarwake.com/css/app.css" media="all" id="appcss">
         <script src="http://perkroulette.xstarwake.com/js/streaming-mode-embed.js" type="text/javascript"></script>
 
-        <audio src="http://perkroulette.xstarwake.com/css/audio/slots.mp3" autoplay="autoplay" loop="loop"></audio>
-
     </head>
+    <audio src="http://perkroulette.xstarwake.com/css/audio/slots.mp3" autoplay="autoplay" loop="loop">Not supported</audio>
     <body class="perkroulette-app" id="streaming-mode-embed" onload="pickRandomPerk()">
         <div class="perks-hgrid">
 
