--- a/streaming-mode/embed/index.html
+++ b/streaming-mode/embed/index.html
@@ -10,7 +10,7 @@
         <script src="http://perkroulette.xstarwake.com/js/streaming-mode-embed.js" type="text/javascript"></script>
 
     </head>
-    <audio src="http://perkroulette.xstarwake.com/css/audio/slots.mp3" autoplay="autoplay" loop="loop">Not supported</audio>
+    <audio src="http://perkroulette.xstarwake.com/css/audio/slots.mp3" autoplay="autoplay">Not supported</audio>
     <body class="perkroulette-app" id="streaming-mode-embed" onload="pickRandomPerk()">
         <div class="perks-hgrid">
 
