--- a/index.html
+++ b/index.html
@@ -72,12 +72,14 @@
                             <input onclick="loadPerks()" type="radio" name="teams" id="kill">
                             <input onclick="loadPerks()" type="radio" name="teams" id="pckl">
                             <input onclick="loadPerks()" type="radio" name="teams" id="pnsh">
+                            <input onclick="loadPerks()" type="radio" name="teams" id="tcsm">
                             <div class="label_container">
                                 <label for="surv" onclick="loadPerks()">Survivor</label>
                                 <label for="kill" onclick="loadPerks()">Killer</label>
 <!--                                
                                 <label for="pckl" onclick="loadPerks()">Pickle</label>
 -->
+                                <label for="tcsm" onclick="loadPerks()">TCSM</label>
                                 <label for="pnsh" onclick="loadPerks()">Punish</label>
                             </div>
                         </div>
